<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Warhorn.EventInfoFragment">

    <ScrollView
        android:id="@+id/Sessions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RemoveEvent">

        <LinearLayout
            android:id="@+id/SessionList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider"
            android:dividerPadding="12dip"
            android:orientation="vertical"
            android:showDividers="middle" />
    </ScrollView>

    <Spinner
        android:id="@+id/CurrentEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@+id/RemoveEvent"
        app:layout_constraintEnd_toStartOf="@+id/AddButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/AddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AddEventButtonText"
        app:layout_constraintBottom_toTopOf="@+id/Sessions"
        app:layout_constraintEnd_toStartOf="@id/RemoveEvent"
        app:layout_constraintTop_toBottomOf="@id/CurrentEvent"
        app:layout_constraintVertical_bias="0.013"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/RemoveEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RemoveEventButtonText"
        app:layout_constraintBottom_toTopOf="@id/Sessions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CurrentEvent" />
</androidx.constraintlayout.widget.ConstraintLayout>